--- a/src/App.css
+++ b/src/App.css
@@ -213,7 +213,7 @@ h3 {
 	.title {
 		position: absolute;
 		left: 0;
-		top: 0;
+		top: 100px;
 		right: 0;
 		bottom: 0;
 		width: 100%;
@@ -233,3 +233,6 @@ h3 {
 		height: 100px;
 	}	
 }
+
+
+
