--- a/src/Styles/App.css
+++ b/src/Styles/App.css
@@ -2,11 +2,44 @@ body {
 	background-color: #F5F4F0;
 }
 
+button {
+display: block;
+margin: 0 auto;
+background-color: black;
+margin-bottom: 30px;
+color: white;
+padding: 20px;
+}
+
+.currencyRates {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+.usd, .cad {
+	width: 45%;
+	height: 400px;
+	background: rgba(0,0,0, 0.1);
+	margin: 20px;
+	text-align: center;
+}
+
+input[type="text"] {
+	margin-bottom: 30px;
+}
+
+input[type="submit"] {
+	background: black;
+	padding: 20px;
+	color: white;
+
+}
+
 a {
 	color: white;
 }
 a:hover {
-	color: red;
+	color: #EE3A43;
 	text-decoration:none;
 }
 
@@ -35,30 +68,15 @@ a:hover {
 .buttons {
 	display: flex;
 	justify-content: space-around;
+	margin-top: 30px;
 }
 
-.buttons div {
-	width: 75px;
-	height: 75px;
-	border-radius: 100%;
-	margin: 20px;
-}
-.buttons div:first-child {
-	background-color: gray;
-}
-
-.buttons div:nth-child(2) {
-	background-color: gray;
-}
-
-.buttons div:nth-child(3) {
-	background-color: gray;
-}
 
 .content-parent {
 	display: block;
 	margin: 0 auto;
 	width: 80%;
+	margin-top: 30px;
 }
 .content {
 	display: flex;
@@ -66,20 +84,13 @@ a:hover {
 	justify-content: space-between;
 }
 
-.content div {
-	width: 500px;
-	height: 250px;
-	background-color: gray;
-	margin: 15px;
-}
-
-
 .visit {
 	margin: 20px;
 	padding: 20px;
 }
 
 .tabTitle {
+	font-size: 18px;
 	text-align: center;
 }
 /*Tabs CSS
@@ -100,6 +111,7 @@ a:hover {
   list-style: none;
   padding: 6px 12px;
   cursor: pointer;
+  font-size: 10px;
 }
 
 .react-tabs__tab--selected {
@@ -145,10 +157,13 @@ a:hover {
 
 
 @media (min-width: 480px) {
-	.buttons div {
-		width: 100px;
-		height: 100px;
-	}	
+	.tabTitle {
+		font-size: 36px;
+	}
+	.react-tabs__tab {
+	  font-size: 18px;
+	}
+		
 }
 
 
