--- a/src/Styles/App.css
+++ b/src/Styles/App.css
@@ -3,36 +3,12 @@ body {
 }
 
 button {
-display: block;
-margin: 0 auto;
-background-color: black;
-margin-bottom: 30px;
-color: white;
-padding: 20px;
-}
-
-.currencyRates {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-}
-.usd, .cad {
-	width: 45%;
-	height: 400px;
-	background: rgba(0,0,0, 0.1);
-	margin: 20px;
-	text-align: center;
-}
-
-input[type="text"] {
+	display: block;
+	margin: 0 auto;
+	background-color: black;
 	margin-bottom: 30px;
-}
-
-input[type="submit"] {
-	background: black;
-	padding: 20px;
 	color: white;
-
+	padding: 20px;
 }
 
 a {
@@ -43,15 +19,29 @@ a:hover {
 	text-decoration:none;
 }
 
-#banner {
+.banner {
 	width: 100%;
 	position: relative;
 }
 
 .title {
-    display: none;
+    position: absolute;
+    left: 0;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
+
+.title h1 {
+	font-size: 1.5em;
+
+}
 .nav-item {
 	margin-left: 20px;
 	margin-right: 20px;
@@ -68,7 +58,9 @@ a:hover {
 .buttons {
 	display: flex;
 	justify-content: space-around;
-	margin-top: 30px;
+	margin: 30px 0px;
+	padding: 20px;
+	box-shadow: 2px 2px 4px rgba(0,0,0, 0.5);
 }
 
 
@@ -98,7 +90,6 @@ a:hover {
 
 .react-tabs__tab-list {
   border-bottom: 1px solid #aaa;
-  margin: 0 0 10px;
   padding: 0;
 }
 
@@ -119,6 +110,11 @@ a:hover {
   border-color: #aaa;
   color: black;
   border-radius: 5px 5px 0 0;
+
+}
+
+.react-tabs__tab-panel--selected {
+  box-shadow: 2px 2px 4px rgba(0,0,0, 0.5);
 }
 
 .react-tabs__tab--disabled {
@@ -150,6 +146,14 @@ a:hover {
   display: block;
 }
 
+.homeButtons {
+	text-align: center;
+	width: 60px;
+	height: 60px;
+	display: flex;
+	border-radius: 100%;
+}
+
 /* ================================= 
   Media Queries
 ==================================== */
@@ -163,8 +167,9 @@ a:hover {
 	.react-tabs__tab {
 	  font-size: 18px;
 	}
-		
+	.usd, .cad {
+		width: 45%;
+	}	
 }
-
 
 
