--- a/src/Styles/Slick.css
+++ b/src/Styles/Slick.css
@@ -7,7 +7,21 @@
     font-size: 40px;
     opacity: 1;
     color: black;
+}
 
+.slick-prev:hover, .slick-next:hover {
+	opacity: 0.8;
+}
+
+.slick-prev {
+	left: 10%;
+	top: 80%;
+	z-index: 1000;
+}
+.slick-next {
+	right: 10%;
+	top: 80%;
+	z-index: 1000;
 }
 
 .carousel {
@@ -72,7 +86,15 @@ li {
 
 
 @media (min-width: 480px) {
+.slick-prev {
+	left: 10%;
+	top: 50%;
+}
 
+.slick-next {
+	right: 10%;
+	top: 50%;
+}
 
 
   .slick-slide img {
@@ -84,6 +106,17 @@ li {
 }
 
 @media (min-width: 769px) {
+
+.slick-prev {
+	left: 10%;
+	top: 50%;
+}
+
+.slick-next {
+	right: 10%;
+	top: 50%;
+}
+
   .main-title {
     float: left;
   }
