--- a/src/Styles/Slick.css
+++ b/src/Styles/Slick.css
@@ -69,6 +69,7 @@ li {
 	display: block;
 	margin: 0 auto!important;
 	padding: 10px;
+	z-index: 1000;
 }
 
 .slick-dots li {
@@ -77,6 +78,8 @@ li {
 		height: 10px;
 		color: white!important;
 }
+
+
 
 
 
@@ -135,5 +138,27 @@ li {
 	}
 }
 
+.bannerSlick .slick-dots {
+	position: absolute!important;
+	max-width: 100%;
+	margin-bottom: 30px!important;
+	
+}
+.bannerSlick .slick-dots li {
+	margin: 0px 10px;
+}
 
+.bannerSlick .slick-dots li button:before {
+	font-size: 12px;
+	color: white;
+	opacity: 0.5;
+}
 
+.bannerSlick .slick-dots li.slick-active button:before {
+    opacity: .75;
+    color: black;
+}
+
+.bannerSlick .slick-list {
+	padding: 0;
+}
