--- a/src/Styles/Buy.css
+++ b/src/Styles/Buy.css
@@ -34,11 +34,14 @@ input[type="text"] {
 }
 
 input[type="submit"] {
-	background: black;
+	background: rgba(0,0,0,0.75);
 	padding: 20px;
 	color: white;
 }
 
+input[type="submit"]:hover {
+	background: rgba(0,0,0,1);
+}
 @media (min-width: 480px) {
 	.usd, .cad {
 		width: 40%;
