--- a/src/Styles/Slick.css
+++ b/src/Styles/Slick.css
@@ -141,7 +141,7 @@ li {
 .bannerSlick .slick-dots {
 	position: absolute!important;
 	max-width: 100%;
-	margin-bottom: 30px!important;
+	margin-bottom: 10px!important;
 	
 }
 .bannerSlick .slick-dots li {
@@ -161,4 +161,11 @@ li {
 
 .bannerSlick .slick-list {
 	padding: 0;
+}
+
+
+@media (min-width: 480px) {
+.bannerSlick .slick-dots {
+	margin-bottom: 30px!important;
+}
 }
