--- a/src/Styles/Header.css
+++ b/src/Styles/Header.css
@@ -1,3 +1,8 @@
+@keyframes appear {
+    from {opacity: 0;}
+    to {opacity: 1;}
+}
+
 .banner {
 	width: 100%;
 	position: relative;
@@ -14,6 +19,11 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    animation-name: appear;
+    animation-delay: 1s;
+    animation-duration: 10s;
+    animation-iteration-count: infinite;
+    opacity: 0;
 }
 
 
