--- a/src/Styles/Slick.css
+++ b/src/Styles/Slick.css
@@ -9,18 +9,21 @@
     color: black;
 }
 
+.slick-prev, .slick-next {
+    width: 40px;
+    height: 40px;
+}
+
 .slick-prev:hover, .slick-next:hover {
 	opacity: 0.8;
 }
 
 .slick-prev {
-	left: 10%;
-	top: 80%;
+	left: 0%;
 	z-index: 1000;
 }
 .slick-next {
-	right: 10%;
-	top: 80%;
+	right: 0%;
 	z-index: 1000;
 }
 
