--- a/src/Styles/Speak.css
+++ b/src/Styles/Speak.css
@@ -2,22 +2,29 @@
 	padding: 20px;
 }
 
+
+.keyboard form {
+	border: 2px solid rgba(0,0,0, 0.75);
+	margin-bottom: 20px;
+	background: rgb(238, 58, 67);
+	border-radius: 10px;
+}
 .keys {
 	display: flex;
 	flex-wrap: wrap;
-	width: 90%;
-	margin: 0 auto;
-	margin-top: 20px;
+	justify-content: center;
+	margin: 20px auto;
 }
 .keyboard-enter {
 	box-shadow: 5px 5px 10px rgba(0,0,0, 0.75);
-	height: 300px;
+	height: 250px;
 	width: 90%;
 	margin: 0 auto;
 	margin-top: 20px;
 	padding: 20px;
 	margin-bottom: 10px;
 	display: block;
+	background: white;
 }
 
 .keyboard-header {
@@ -28,12 +35,18 @@
 .keyboard input[type="submit"] {
 	font-size: 1.25em;
 	padding: 5px;
-	min-width: 36px;
+	min-width: 40px;
 }
 
 @media (min-width: 768px) {
 	.keyboard input[type="submit"] {
-		font-size: 2.25em;
-		min-width: 90px;
+		font-size: 2em;
+		min-width: 80px;
+	}
+	.keyboard-enter {
+		width: 80%;
+	}
+	.keys {
+		width: 80%;
 	}
 }
