--- a/src/Styles/Home.css
+++ b/src/Styles/Home.css
@@ -1,3 +1,7 @@
+.home {
+	margin-bottom: 100px;
+}
+
 .home-overlay h3 {
 	font-size: 0.8em;
 	line-height: 1.0em;
@@ -21,13 +25,7 @@
 	flex-wrap: wrap;
 	justify-content: space-between;
 }
-.buttons {
-	display: flex;
-	justify-content: space-around;
-	margin-top: -10px;
-	padding: 20px;
-	box-shadow: 2px 2px 4px rgba(0,0,0, 0.5);
-}
+
 
 .homeButtons {
 	text-align: center;
@@ -76,6 +74,7 @@
 	margin-top: 50%;
 
 }
+
 
 
 /* ================================= 
