--- a/src/Styles/Buy.css
+++ b/src/Styles/Buy.css
@@ -23,7 +23,8 @@
 }
 
 .usd {
-	background-image: url('../us50.jpg');
+	background-image: url('https://victoria.bodiewebdesign.com/Images/us50.jpg');
+	background-position: center;
 	width: 335px;
 	height: 205px;
 	display: flex;
@@ -32,7 +33,8 @@
 }
 
 .cad {
-	background-image: url('../canada50.jpg');
+	background-image: url('https://victoria.bodiewebdesign.com/Images/canada50.jpg');
+	background-position: center;
 	display: flex;
 	width: 335px;
 	height: 205px;
@@ -63,11 +65,7 @@ input[type="submit"] {
 input[type="submit"]:hover {
 	background: rgba(0,0,0,1);
 }
-@media (min-width: 480px) {
-	.usd, .cad {
-		width: 40%;
-	}
-}
+
 @media (min-width: 769px) {
 	.usd, .cad {
 		width: 500px;
