--- a/src/Styles/Buy.css
+++ b/src/Styles/Buy.css
@@ -40,6 +40,7 @@
 	height: 205px;
 	justify-content: center;
 	align-items: center;
+	background-color: rgba(0,0,0,0.3)
 }
 
 .cad h3 {
@@ -47,6 +48,14 @@
 	text-shadow: 2px 2px 4px rgba(0,0,0,0.9);
 }
 
+.cad .results{
+	display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    background: rgba(0,0,0,0.25);
+}
 .currency {
 	text-align: center;
 	margin-top: 20px;
