--- a/src/Styles/Header.css
+++ b/src/Styles/Header.css
@@ -8,7 +8,7 @@
 	position: relative;
 }
 
-.title {
+.banner-title {
     position: absolute;
     left: 0;
     top: 0;
@@ -27,8 +27,8 @@
 }
 
 
-.title h1 {
-	font-size: 1.25em;
+.banner-title h1 {
+	font-size: 2.25em;
 	line-height: 1.0;
 	color: white;
 	text-shadow: 4px 4px 8px rgba(0,0,0,0.8);
